apps-deployment-gitops-zero-to-hero-platform-cloudnative-pg.yaml
# Source: platform/charts/cloudnative-pg/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-cloudnative-pg
  namespace: gitops-zero-to-hero
  labels:
    helm.sh/chart: cloudnative-pg-0.29.0
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: platform
    app.kubernetes.io/version: "1.30.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
      app.kubernetes.io/instance: platform
  template:
    metadata:
      annotations:
        checksum/rbac: 3cb1046f824ad866c9cbea93d4b6e4fbed42409a34dc4c03c83fd4e1dbb0043a
        checksum/config: e9ace036b31cff99424df33d1028aa90b7a13c8fed26b17399e06459f68e70d4
        checksum/monitoring-config: dda29efb320f911dfe68225a40f2b08fc8a594ced21bae35f0046fd74ac6a906
      labels:
        app.kubernetes.io/name: cloudnative-pg
        app.kubernetes.io/instance: platform
    spec:
      containers:
      - args:
        - controller
        - --leader-elect
        - --max-concurrent-reconciles=10
        - --config-map-name=cnpg-controller-manager-config
        - --webhook-port=9443
        command:
        - /manager
        image: "ghcr.io/cloudnative-pg/cloudnative-pg:1.30.0"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 10001
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          periodSeconds: 5
        volumeMounts:
        - mountPath: /controller
          name: scratch-data
        - mountPath: /run/secrets/cnpg.io/webhook
          name: webhook-certificates
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: platform-cloudnative-pg
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: scratch-data
      - name: webhook-certificates
        secret:
          defaultMode: 420
          optional: true
          secretName: cnpg-webhook-cert
