apps-deployment-gitops-zero-to-hero-platform-valkey-operator.yaml
# Source: platform/charts/valkey-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-valkey-operator
  namespace: gitops-zero-to-hero
  labels:
    helm.sh/chart: valkey-operator-0.6.0
    app.kubernetes.io/name: valkey-operator
    app.kubernetes.io/instance: platform
    app.kubernetes.io/version: "v0.6.0"
    app.kubernetes.io/managed-by: Helm
    control-plane: controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: valkey-operator
      app.kubernetes.io/instance: platform
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/name: valkey-operator
        app.kubernetes.io/instance: platform
        control-plane: controller-manager
    spec:
      
      serviceAccountName: platform-valkey-operator
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: manager
        image: ghcr.io/valkey-io/valkey-operator:v0.6.0
        imagePullPolicy: IfNotPresent
        command:
        - /manager
        args:
        - --leader-elect
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=:8443
        - --metrics-secure=false
        ports:
        - name: metrics
          containerPort: 8443
          protocol: TCP
        - name: health
          containerPort: 8081
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
