service-gitops-zero-to-hero-cnpg-webhook-service.yaml
# Source: platform/charts/cloudnative-pg/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnpg-webhook-service
  namespace: gitops-zero-to-hero
  labels:
    helm.sh/chart: cloudnative-pg-0.29.0
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: platform
    app.kubernetes.io/version: "1.30.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook-server
    name: webhook-server
  selector:
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: platform
